slick на главной, правки текста

--- a/#src/blocks/productPage/cost.html
+++ b/#src/blocks/productPage/cost.html
@@ -10,7 +10,7 @@
 						1500-2500 рублей — для классического наращивания;<br> 2200-3000 рублей — для объемного.</p>
 					<p>Итого наращивание ежемесячно обойдется порядка 5 000 рублей в среднем.</p>
 					<p class="text-default">При использовании сыворотки Toplash:</p>
-					<p>Одного флакона хватает аж на 3 месяца ежедневного использования. Если разделить цену, мы получаем стоимость равную менее 700 рублей ежемесячно. Что бесспорно гораздо меньше чем при наращивании.</p>
+					<p>Одного флакона хватает на полных 3 месяца ежедневного использования. Если разделить цену, мы получаем стоимость, равную менее 700 рублей ежемесячно. Это бесспорно гораздо меньше, чем при наращивании.</p>
 					<a href="" class="btn">
 						<span>Попробовать Toplash</span>
 					</a>
