--- a/#src/blocks/productPage/result21.html
+++ b/#src/blocks/productPage/result21.html
@@ -24,10 +24,10 @@
 							<p>Для достижения максимальных результатов, используйте сыворотку для роста ресниц и бровей Toplash Lash and Brow перед сном, а гель для роста и фиксации Toplash Fix and Grow brow gel – в течение дня. Гель можно наносить в два и более слоев, он не оставляет белесого налета. Брови приобретают естественный блеск и ухоженные вид.</p>
 						}
 						@@if(text == "textMascara"){
-							<p>В состав нашей туши входит экстрачерный пигмент на основе древесного угля, который делает ваш взгляд невероятно выразительным и ярким. Благодаря специальной формуле, Toplash Extra Ebony Mascara ложиться идеально ровно, не скатываясь в комочки и не осыпаясь.</p>
+							<p>В состав нашей туши входит экстрачерный пигмент на основе древесного угля, который делает ваш взгляд невероятно выразительным и ярким. Благодаря специальной формуле Toplash Extra Ebony Mascara ложиться идеально ровно, не скатываясь в комочки и не осыпаясь.</p>
 							<p>Изогнутая щеточка подкручивает даже самые прямые и короткие ресницы, приподнимая их от корней и фиксируя изгиб. Тушь идеально подчеркивает эффект от использования сыворотки Toplash Lash and Brow.</p>
-							<p>Формула разработана таким образом, что средство легко смывается теплой водой, но устойчиво к дождю и слезам радости. Для демакияжа туши достаточно просто намочить ресницы теплой водой, слегка помассировав, снять тушь чулочным методом. Так же поддаётся снятию мицелярной водой.</p>
-							<p>Тушь полностью гипоаллергенна – и подходит для использования даже на самых чувствительных глазах.</p>
+							<p>Формула разработана таким образом, что средство легко смывается теплой водой, но устойчиво к дождю и слезам. Для демакияжа туши достаточно просто намочить ресницы теплой водой, слегка помассировав, снять тушь чулочным методом. Так же поддается снятию мицеллярной водой.</p>
+							<p>Тушь полностью гипоаллергенна и подходит для использования даже на самых чувствительных глазах.</p>
 						}
 						@@if(text == "textStamp"){
 							<p>Идеальные чёрные стрелки - это самый беспроигрышный способ добавить взгляду выразительности.</p>
