--- a/#src/blocks/productPage/stamp-block-X.html
+++ b/#src/blocks/productPage/stamp-block-X.html
@@ -9,7 +9,7 @@
 					</div>
 					<div class="nlc-mb-32">
 						<p class="text-huge">Создавайте любые стрелки с помощью Toplash eyeliner</p>
-						<p>Супер стойкая черная подводка TopLash eyeliner and wing stamp воплотит с тобой десятки вариантов макияжа, но главное, теперь этот процесс займёт считанные секунды.</p>
+						<p>Супер стойкая черная подводка TopLash eyeliner and wing stamp воплотит с тобой десятки вариантов макияжа, но главное - теперь этот процесс займет считанные секунды.</p>
 						<p>Двусторонний Toplash eyeliner имеет специальный штампик в виде хвостика стрелочки с одной стороны и тонкий аппликатор с другой. Теперь сделать идеально ровные и симметричные стрелки проще простого!</p>
 					</div>
 					<div class="bottomLil">
