--- a/#src/blocks/productPage/unique.html
+++ b/#src/blocks/productPage/unique.html
@@ -19,7 +19,7 @@
 						}
 						@@if(page === "mascara"){
 							<p class="mb-16">Мы совершенно одержимы всем, что связано с выразительным взглядом! Ваши результаты от использования Toplash & Brow вдохновили нас на создание туши для ресниц Toplash Extra Ebony Mascara, которая подчеркнет ваши достижения. С нашей новой тушью вы получите все и сразу: удлинение, изгиб, объем и экстрачерное покрытие.</p>
-							<p>Состав для нас очень важен, поэтому, помимо красивого эффекта, ресницы получат увлажнение – и будут защищены от обезвоживания за счет таких компонентов, как Витамин Е и Пантенол. Кератин, который также входит в состав средства, будет работать на восстановление и укрепление волосков. </p>
+							<p>Состав для нас очень важен, поэтому помимо красивого эффекта ресницы получат увлажнение и будут защищены от обезвоживания за счет таких компонентов, как Витамин Е и Пантенол. Кератин, который также входит в состав средства, будет работать на восстановление и укрепление волосков.</p>
 						}
 					</div>
 					<div class="bottomLil">
