--- a/#src/blocks/productPage/warrantyWork.html
+++ b/#src/blocks/productPage/warrantyWork.html
@@ -5,9 +5,9 @@
 				<div class="warrantyWork__text nlc-mb-16">
 					<img loading="lazy" src="img/sprite/fill-sprite.svg#security" alt="">
 					<p class="text-huge">Как работает гарантия 90 дней?</p>
-					<p>Все очень просто, если вам не понравился продукт, и вы не получили ожидаемый эффект, то мы со своей стороны гарантируем возврат всей суммы заказа.</p>
+					<p>Все очень просто: если вам не понравился продукт и вы не получили ожидаемый эффект, то мы со своей стороны гарантируем возврат всей суммы заказа.</p>
 					<p class="text-medium">Почему мы так делаем?</p>
-					<p>Все очень просто, для нас самое главное это довольный покупатель. Мы стараемся выпускать только те продукты, которые будут удовлетворять ваши потребности. Каждый ваш отзыв помогает нам становиться лучше.</p>
+					<p>Все очень просто: для нас самое главное - это довольный покупатель. Мы стараемся выпускать только те продукты, которые будут удовлетворять ваши потребности. Каждый ваш отзыв помогает нам становиться лучше.</p>
 					<a href="" class="link">Воспользоваться гарантией</a>
 				</div>
 				<div class="warrantyWork__image">
