--- a/#src/home.html
+++ b/#src/home.html
@@ -11,7 +11,7 @@
 				<div class="fScreen__content">
 					<div class="fScreen__text nlc-mb-32">
 						<p class="text-huge">Скидки 10% для всех новых пользователей!</p>
-						<p>Нужно всего лишь зарегистрироваться, что бы забрать свой бонус на первую покупку.</p>
+						<p>Нужно всего лишь зарегистрироваться, чтобы забрать свой бонус на первую покупку.</p>
 						<a class="btn md4-w-100" href="">Узнать больше</a>
 					</div>
 				</div>
@@ -25,19 +25,19 @@
 						<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#arrow"/></svg>
 					</button>
 					<div class="fScreen__slider js-slider-baner slider-style-banner">
-						<div class="fScreen__image">
-							<img width="1080" height="1080" loading="lazy" src="img/other/08.jpg" alt="">
+						<div class="fScreen__image ibg">
+							<img loading="lazy" width="1080" height="1080" src="img/other/08.jpg" alt="">
 						</div>
-						<div class="fScreen__image">
+						<div class="fScreen__image ibg">
 							<img loading="lazy" src="img/other/05.jpg" alt="">
 						</div>
-						<div class="fScreen__image">
+						<div class="fScreen__image ibg">
 							<img loading="lazy" src="img/other/087.jpg" alt="">
 						</div>
-						<div class="fScreen__image">
+						<div class="fScreen__image ibg">
 							<img loading="lazy" src="img/other/06.jpg" alt="">
 						</div>
-						<div class="fScreen__image">
+						<div class="fScreen__image ibg">
 							<img loading="lazy" src="img/devOnly/top-61.png" alt="">
 						</div>
 					</div>
@@ -410,7 +410,7 @@
 									<li>Ресницы и брови становятся сильнее и достигают своей максимальной длины.</li>
 									<li>Препятствует выпадению и ломкости.</li>
 								</ol>
-								<p>Всего через 21 день вызаметите результат. А если через 90 дней использования сыворотки вы не заметите роста — мы вернём деньги за покупку.</p>
+								<p>Всего через 21 день вы заметите результат. А если через 90 дней использования сыворотки вы не заметите роста — мы вернём деньги за покупку.</p>
 							</div>
 							<button class="btn md4-w-100">Узнать больше о Toplash</button>
 						</div>
@@ -851,7 +851,7 @@
 						<div class="cardTerms v4 mod-v2">
 							<img loading="lazy" src="img/sprite/fill-sprite.svg#green-fire" alt="">
 							<p class="text-medium">Натуральный состав</p>
-							<p>Все продукты компании Toplash сертифицированы абсолютно безопасный и гипоаллергенны.</p>
+							<p>Все продукты компании Toplash сертифицированы, абсолютно безопасны и гипоаллергенны.</p>
 						</div>
 					</div>
 					<div class="col-4 p-16">
