--- a/#src/mascara.html
+++ b/#src/mascara.html
@@ -25,7 +25,7 @@
 					"icon": "green-fire",
 					"cardClass": "v4",
 					"label": "Натуральный состав",
-					"text": "Препарат прошёл исследования. Все компоненты абсолютно безопасны и гепоалергенны."
+					"text": "Препарат прошёл исследования. Все компоненты абсолютно безопасны и гипоаллергенны."
 				},
 				"2": {
 					"icon": "euro",
@@ -37,13 +37,13 @@
 					"icon": "big-ok",
 					"cardClass": "v6",
 					"label": "Гарантированный эффект",
-					"text": "Все препараты проходят тестирование и показывают заметный эффект у подавляющего большенства женщин."
+					"text": "Все препараты проходят тестирование и показывают заметный эффект у подавляющего большинства женщин."
 				}
 			}
 		})
 	</div>
 	@@include('blocks/productPage/unique.html',{
-		"title": "Что делает тушь Toplash Mascara. уникальной?",
+		"title": "Что делает тушь Toplash Mascara уникальной?",
 		"classTableBG": "bg-gold",
 		"classTable": "table-3",
 		"img1": "img/comparison/03.webp",
