--- a/#src/product-page.html
+++ b/#src/product-page.html
@@ -25,7 +25,7 @@
 					"icon": "green-fire",
 					"cardClass": "v4",
 					"label": "Натуральный состав",
-					"text": "Препарат прошёл исследования. Все компоненты абсолютно безопасны и гепоалергенны."
+					"text": "Препарат прошёл исследования. Все компоненты абсолютно безопасны и гипоаллергенны."
 				},
 				"2": {
 					"icon": "euro",
