--- a/#src/roller.html
+++ b/#src/roller.html
@@ -25,7 +25,7 @@
 				"icon": "big-ok",
 				"cardClass": "v6",
 				"label": "Гарантированный эффект",
-				"text": "Все препараты проходят тестирование и показывают заметный эффект у подавляющего большенства женщин."
+				"text": "Все препараты проходят тестирование и показывают заметный эффект у подавляющего большинства женщин."
 			}
 		}
 	})
