--- a/#src/shipping-and-payment.html
+++ b/#src/shipping-and-payment.html
@@ -21,8 +21,8 @@
 						</div>
 						<div class="nlc-mb-16">
 							<p class="text-huge">Доставка и оплата</p>
-							<p>Вы можете доставить товар в любую точку России удобным для вас способом.</p>
-							<p>Оплата производится как онлайн так и непосредственно при получени товара на руки. </p>
+							<p>Вы можете заказать товар в любую точку России удобным для вас способом.</p>
+							<p>Оплата производится как онлайн, так и непосредственно при получении товара на руки.</p>
 						</div>
 						<div class="bottomLil">
 							<svg class="bottomLil__1"><use xlink:href="img/sprite/icons-sprite.svg#lil-2"/></svg>
@@ -85,7 +85,7 @@
 							<div class="f-jcsb-aic">
 								<p class="text-medium mr-8">Самовывоз</p>
 							</div>
-							<p>Самовывоз не возможен без предварительного заказа на сайте или по телефону горячей линии.</p>
+							<p>Самовывоз невозможен без предварительного заказа на сайте или по телефону горячей линии.</p>
 							<p>После оформления заказа вам придет письмо на указанный вами email с подтверждением, в котором будет номер заказа.</p>
 							<p>Как только ваш заказ будет доступен в выбранном пункте, вам придет сообщение на указанный номер, после чего вы сможете его забрать.</p>
 							<p class="text-extra-small">Срок хранения посылки в пункте самовывоза — 7 дней.</p>
@@ -126,11 +126,11 @@
 		<div class="p-16-0 container">
 			<p class="p-16 text-huge">Правила оплаты и доставки</p>
 			<ol class="list-ol p-16 pl-0">
-				<li>При неверно или не полностью указанных данных получателя (Ф.И.О.,почтовый индекс, контактный телефон, адрес), заказ не принимается в обработку и без дополнительных предупреждений может быть отменен. Пожалуйста, внимательно относитесь к заполнению данных на сайте, при оформлении заказа. Заказы, оформленные на сумму свыше 20 000 руб. отправляются только на условиях 100% предоплаты.</li>
+				<li>При неверно или не полностью указанных данных получателя (Ф.И.О.,почтовый индекс, контактный телефон, адрес), заказ не принимается в обработку и без дополнительных предупреждений может быть отменен. Пожалуйста, внимательно относитесь к заполнению данных на сайте при оформлении заказа. Заказы, оформленные на сумму свыше 20 000 руб., отправляются только на условиях 100% предоплаты.</li>
 				<li>Наш интернет-магазин ограничивает доставку заказов с оплатой наличными при получении для лиц, которые использовали данный способ оплаты и не выкупили предыдущий заказ. Вышеуказанным покупателям доступна оплата заказов на сайте с помощью онлайн-системы "Robokassa" или оплаты квитанции в Сбербанке. Если покупатель выкупает оплаченный заказ, то ему снова становятся доступны все способы оплаты в нашем интернет-магазине.</li>
 				<li>Если заказ не был выкуплен и вернулся обратно (возврат), отправка следующего заказа возможна только при 100% предоплате.</li>
-				<li>При оплате наложенным платежом, наличными (курьеру, в постамате и пункте выдачи) следующий заказ не высылается, пока не будет выкуплен предыдущий. Товар не бронируется и может быть отправлен досрочно только на условиях 100% предоплаты. Просим обратить внимание, что в корзине покупателя, до оформления и присвоения заказу номера, товар не резервируется.</li>
-				<li>Заказы в Азейрбайджан, Армению, Белоруссию, Казахстан, Чечню, Грузию, Киргизию, Молдавию, Таджикистан, Туркменистан и Узбекистан отправляются при 100% предоплате. Способ оплаты можно выбрать при оформлении заказа (оплата через систему Robokassa или оплата квитанции в любом банке, принимающем платежи).</li>
+				<li>При оплате наложенным платежом, наличными (курьеру, в постамате и пункте выдачи) следующий заказ не высылается, пока не будет выкуплен предыдущий. Товар не бронируется и может быть отправлен досрочно только на условиях 100% предоплаты. Просим обратить внимание, что в корзине покупателя до оформления и присвоения заказу номера товар не резервируется.</li>
+				<li>Заказы в Азербайджан, Армению, Белоруссию, Казахстан, Чечню, Грузию, Киргизию, Молдавию, Таджикистан, Туркменистан и Узбекистан отправляются при 100% предоплате. Способ оплаты можно выбрать при оформлении заказа (оплата через систему Robokassa или оплата квитанции в любом банке, принимающем платежи).</li>
 				<li>От покупателей обязательно требуется подтверждение заказа по эл. почте или телефону.</li>
 			</ol>
 			<p class="p-16 text-medium">Если у вас остались вопросы по доставке или оплате товаров, вы всегда можете задать свой вопрос, позвонив по телефону горячей линии 8 800 555 03 94</p>
