--- a/#src/stamp.html
+++ b/#src/stamp.html
@@ -21,7 +21,7 @@
 					"icon": "green-fire",
 					"cardClass": "v4",
 					"label": "Натуральный состав",
-					"text": "Препарат прошёл исследования. Все компоненты абсолютно безопасны и гепоалергенны."
+					"text": "Препарат прошёл исследования. Все компоненты абсолютно безопасны и гипоаллергенны."
 				},
 				"2": {
 					"icon": "euro",
@@ -33,7 +33,7 @@
 					"icon": "big-ok",
 					"cardClass": "v6",
 					"label": "Гарантированный эффект",
-					"text": "Все препараты проходят тестирование и показывают заметный эффект у подавляющего большенства женщин."
+					"text": "Все препараты проходят тестирование и показывают заметный эффект у подавляющего большинства женщин."
 				}
 			}
 		})
