--- a/#src/blocks/productPage/faq.html
+++ b/#src/blocks/productPage/faq.html
@@ -23,7 +23,7 @@
 						</button>
 					</div>
 					<div class="nlc-mb-8 js-dropdown-body dropdown__body">
-						<p>Флакон Toplash Lash and Brow объемом 3 мл., рассчитан на 2-3 месяца ежедневного применения, объемом 6 мл., рассчитан на 4-6 месяца ежедневного применения.</p>
+						<p>Флакон Toplash Lash and Brow объемом 3 мл. рассчитан на 2-3 месяца ежедневного применения, объемом 6 мл. рассчитан на 4-6 месяца ежедневного применения.</p>
 					</div>
 				</div>
 				<div class="js-dropdown-item">
@@ -53,7 +53,7 @@
 				</div>
 				<div class="js-dropdown-item">
 					<div class="js-dropdown-head dropdown__head">
-						<p class="text-extra-small">Будет ли эффект такой же сильный как от сыворотки Toplash Lash and Brow ?</p>
+						<p class="text-extra-small">Будет ли эффект такой же сильный, как от сыворотки Toplash Lash and Brow ?</p>
 						<button class="btnRound">
 							<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#plus"/></svg>
 						</button>
@@ -72,7 +72,7 @@
 					</div>
 					<div class="nlc-mb-8 js-dropdown-body dropdown__body">
 						<p>Гель для бровей Toplash гибко фиксирует волоски а так же питает брови, что помогает приобрести им здоровый и ухоженный вид.</p>
-						<p>Для максимального эффекта мы советуем сочетать с сывороткой для роста ресниц и бровей Toplash Lash and Brow. Наносите гель в течении дня а сыворотку перед сном.</p>
+						<p>Для максимального эффекта мы советуем сочетать его с сывороткой для роста ресниц и бровей Toplash Lash and Brow. Наносите гель в течении дня, а сыворотку перед сном</p>
 					</div>
 				</div>
 			}
@@ -96,7 +96,7 @@
 						</button>
 					</div>
 					<div class="nlc-mb-8 js-dropdown-body dropdown__body">
-						<p>Тушь полностью гипоаллергенна – и подходит для использования даже на самых чувствительных глазах.</p>
+						<p>Тушь полностью гипоаллергенна и подходит для использования даже на самых чувствительных глазах.</p>
 					</div>
 				</div>
 				<div class="js-dropdown-item">
@@ -107,20 +107,20 @@
 						</button>
 					</div>
 					<div class="nlc-mb-8 js-dropdown-body dropdown__body">
-						<p>Формула разработана таким образом, что средство легко смывается теплой водой, но устойчиво к дождю и слезам радости.</p>
+						<p>Формула разработана таким образом, что средство легко смывается теплой водой, но устойчиво к дождю и слезам.</p>
 					</div>
 				</div>
 			}
 			@@if(page === "stamp"){
 				<div class="js-dropdown-item">
 					<div class="js-dropdown-head dropdown__head">
-						<p class="text-extra-small">Что если одна из стоон не прокрашивает идеально?</p>
+						<p class="text-extra-small">Что если одна из сторон не прокрашивает идеально?</p>
 						<button class="btnRound">
 							<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#plus"/></svg>
 						</button>
 					</div>
 					<div class="nlc-mb-8 js-dropdown-body dropdown__body">
-						<p>Это может поизойти если флакон долгое время находился в вертикальном положении, положите флакон горизонтально на несколько часов, после чего обе стороны впитают краску равномерно.</p>
+						<p>Это может произойти, если флакон долгое время находился в вертикальном положении. Положите флакон горизонтально на несколько часов, после чего обе стороны впитают краску равномерно.</p>
 					</div>
 				</div>
 				<div class="js-dropdown-item">
@@ -131,8 +131,8 @@
 						</button>
 					</div>
 					<div class="nlc-mb-8 js-dropdown-body dropdown__body">
-						<p>Аккуратно поставьте штамп в уголке глаза, переверните маркер заполните непропечатанное пространство и проведите линию вдоль линии роста ресниц.</p>
-						<p>Можно использовать как в один, так и два слоя. Следующий слой наносите после того, как высохнет предыдущий.</p>
+						<p>Аккуратно поставьте штамп в уголке глаза, переверните маркер, заполните непропечатанное пространство и проведите линию вдоль линии роста ресниц.</p>
+						<p>Можно использовать как в один, так и в два слоя. Следующий слой наносите после того, как высохнет предыдущий.</p>
 					</div>
 				</div>
 			}
