--- a/#src/bonus-program.html
+++ b/#src/bonus-program.html
@@ -133,7 +133,7 @@
 						</button>
 					</div>
 					<div class="nlc-mb-8 js-dropdown-body dropdown__body">
-						<p>Если ваш друг или подруга свершили заказ и получили его , то ваши бонусные баллы будут доступны в личном кабинете  через 24 часа.</p>
+						<p>Если ваш друг или подруга совершили заказ и получили его, то ваши бонусные баллы будут доступны в личном кабинете через 24 часа.</p>
 					</div>
 				</div>
 				<div class="js-dropdown-item">
@@ -155,7 +155,7 @@
 						</button>
 					</div>
 					<div class="nlc-mb-8 js-dropdown-body dropdown__body">
-						<p>Акция бонус за отзыв доступна только при заказе продукции на маркетплейсе Wildberries.</p>
+						<p>Акция “Бонус за отзыв” доступна только при заказе продукции на маркетплейсе Wildberries.</p>
 					</div>
 				</div>
 				<div class="js-dropdown-item">
