Добавился ol список в блоке stick

--- a/#src/blocks/productPage/stick.html
+++ b/#src/blocks/productPage/stick.html
@@ -5,5 +5,39 @@
 			<img loading="lazy" class="stick__desc" src="@@imgStickDesc" alt="">
 			<img loading="lazy" class="stick__mob" src="@@imgStickMob" alt="">
 		</div>
+		<p class="main-p-32-16 text-big">В состав также входит:</p>
+		<ol class="list-ol multi-column">
+			@@if(imgStickDesc === "img/composition/01.jpg"){
+				<li>Вода</li>
+				<li>Экстракт ромашки</li>
+				<li>Экстракт коралины лекарственной</li>
+				<li>Экстракт бибхитаки</li>
+				<li>Экстракт листьев толокнянки</li>
+			}
+			@@if(imgStickDesc === "img/composition/02.jpg"){
+				<li>Вода</li>
+				<li>Глицерин</li>
+				<li>VP/VA  сополимер</li>
+				<li>Tetrasodium edta</li>
+				<li>Alcohol denat</li>
+				<li>Экстракт ромашки</li>
+				<li>Гиалуронат натрия</li>
+				<li>Phenoxyethanol</li>
+				<li>Экстракт листьев туи</li>
+				<li>Экстракт корня женьшеня</li>
+				<li>Экстракт сверции японской</li>
+				<li>Ethylhexylglycerin</li>
+			}
+			@@if(imgStickDesc === "img/composition/03.jpg"){
+				<li>Вода</li>
+				<li>Чёрный пигмент CI 77266</li>
+				<li>Бутиленгликоль</li>
+				<li>Поливинилацетат</li>
+				<li>1,2-Hexanediol</li>
+				<li>Tocopherol</li>
+				<li>Carboxymethyl</li>
+				<li>Hydroxyethylcellulose</li>
+			}
+		</ol>
 	</div>
 </div>
