Немного перестилизовал btn-inv

--- a/#src/info.html
+++ b/#src/info.html
@@ -29,7 +29,7 @@
 								<button type="button">
 									<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#minus"></use></svg>
 								</button>
-								<input type="number" name="count" autocomplete="off" value="1">
+								<input type="number" name="count" autocomplete="off" value="1" readonly>
 								<button type="button">
 									<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#plus"></use></svg>
 								</button>
