Для блок-инпутов inputTextBtn если инпут не пустой тогда кпопка красная

--- a/#src/cart.html
+++ b/#src/cart.html
@@ -162,7 +162,7 @@
 						<div class="label-4">
 							<p class="text-extra-small">Скидка 10% на второй товар в корзине*</p>
 						</div>
-						<div class="inputTextBtn">
+						<div class="inputTextBtn js-inputTextBtn-change">
 							<div class="inputText">
 								<input type="text" autocomplete="off" name="promocode" placeholder=" ">
 								<label for="sv-input-name">Промокод</label>
