Типа опять закончил с изменениями

--- a/#src/blocks/common/footer.html
+++ b/#src/blocks/common/footer.html
@@ -3,8 +3,7 @@
 		<div class="main-p-32-8">
 			<div class="p-8">
 				<p class="text-footnote darkGray mb-16">* Гарантия 90 дней<br>Мы уверены в эффективности средства для роста ресниц и бровей Toplash, ведь она доказана не только клиническими испытаниями*, но и подтверждена отзывами тысяч довольных покупательниц, число которых постоянно растет.</p>
-
-<p class="text-footnote darkGray">Мы не можем гарантировать 100% эффективность абсолютно для всех из-за индивидуальных особенностей организма. Но мы можем и гарантируем возврат денег в течение 90 дней с момента получения вами заказа, в случае если по каким-либо причинам Toplash или любой другой продукт нашего бренда вам не подойдет, и вы решите прекратить его использование. Мы рады получать от вас отзывы о нашей продукции, ваше мнение для нас очень важно.</p>
+				<p class="text-footnote darkGray">Мы не можем гарантировать 100% эффективность абсолютно для всех из-за индивидуальных особенностей организма. Но мы можем и гарантируем возврат денег в течение 90 дней с момента получения вами заказа, в случае если по каким-либо причинам Toplash или любой другой продукт нашего бренда вам не подойдет, и вы решите прекратить его использование. Мы рады получать от вас отзывы о нашей продукции, ваше мнение для нас очень важно.</p>
 			</div>
 			<nav class="breadcrumbs">
 				<ul class="d-flex p-8" itemscope itemtype="https://schema.org/BreadcrumbList">
@@ -116,3 +115,5 @@
 		</div>
 	</div>
 </footer>
+
+</div>
