--- a/#src/home.html
+++ b/#src/home.html
@@ -48,12 +48,12 @@
 	<div class="reviewers">
 		<div class="reviewers__row">
 			<div class="reviewers__col">
-				<a class="reviewers__item" href="">
+				<a class="reviewers__item" href="https://www.wildberries.ru/brands/toplash">
 					<svg><use xlink:href="img/sprite/fill-sprite.svg#bl-1"/></svg>
 				</a>
 			</div>
 			<div class="reviewers__col">
-				<a class="reviewers__item" href="">
+				<a class="reviewers__item" href="https://www.ozon.ru/seller/toplash-4186/?miniapp=seller_4186">
 					<svg><use xlink:href="img/sprite/fill-sprite.svg#bl-2"/></svg>
 				</a>
 			</div>
@@ -69,18 +69,18 @@
 				</div>
 			</div>
 			<div class="reviewers__col">
-				<a class="reviewers__item" href="">
+				<a class="reviewers__item" href="https://market.yandex.ru/brands--toplash/16151946">
 					<svg><use xlink:href="img/sprite/fill-sprite.svg#bl-3"/></svg>
 				</a>
 			</div>
 			<div class="reviewers__col">
-				<a class="reviewers__item" href="">
+				<a class="reviewers__item" href="https://www.amazon.com/toplash">
 					<svg><use xlink:href="img/sprite/fill-sprite.svg#bl-4"/></svg>
 				</a>
 			</div>
 		</div>
 	</div>
-	<div class="main-pt-32-pb-128 container">
+	<div class="main-pt-32-pb-128 container" id="products">
 		<h2 class="p-16 text-huge">Самые популярные продукты Toplash:</h2>
 		<div class="scroll mod-anchor" data-scroll-id="4">
 			<div class="scroll__body">
