--- a/#src/blocks/common/header.html
+++ b/#src/blocks/common/header.html
@@ -1,40 +1,41 @@
-<header>
-	<div class="rkl p-8 ta-c">
-		<p class="text-extra-small">Save 10% for the first purchase with promocode: TLNEWYEAR2022 </p>
-	</div>
-	<div class="nav">
-		<div class="container">
-			<div class="nav__body">
-				<div class="nav__logo">
-					<button class="burger js-burger">
-						<svg class="w24">
-							<use class="st-not-active" xlink:href="img/sprite/icons-sprite.svg#burger-show"/>
-							<use class="st-active" xlink:href="img/sprite/icons-sprite.svg#close"/>
-						</svg>
-					</button>
-					<a href="">
-					<img loading="lazy" src="img/Toplash-logo.svg" alt="" class="logoImage mod-inHeader"></a>
-				</div>
-				<div class="nav__content f-aic">
-					<div class="nav__overlayMenu js-overlayMenu"></div>
-					<nav>
-						<ul class="nav__menu js-menu">
-							<li><a href="https://noname.site">Купить Toplash</a></li>
-							<li><a href="">FAQ</a></li>
-							<li><a href="">Отзывы</a></li>
-							<li><a href="">Профессионалам</a></li>
-							<li><a href="">Проверка продукции</a></li>
-							<li class="parent-btnSec"><a href="" class="btnSec">Войти</a></li>
-						</ul>
-					</nav>
-					<a href="" class="btnSec btnCart"> <!-- class "active" если в корзине что-то есть -->
-						<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#bag"/></svg>
-						<span class="ml-8 btnCartText">Корзина</span>
-						<span class="varticalDevider"></span>
-						<span>0</span>
-					</a>
+<div class="wrapper">
+	<header>
+		<div class="rkl p-8 ta-c">
+			<p class="text-extra-small">Save 10% for the first purchase with promocode: TLNEWYEAR2022 </p>
+		</div>
+		<div class="nav">
+			<div class="container">
+				<div class="nav__body">
+					<div class="nav__logo">
+						<button class="burger js-burger">
+							<svg class="w24">
+								<use class="st-not-active" xlink:href="img/sprite/icons-sprite.svg#burger-show"/>
+								<use class="st-active" xlink:href="img/sprite/icons-sprite.svg#close"/>
+							</svg>
+						</button>
+						<a href="">
+						<img loading="lazy" src="img/Toplash-logo.svg" alt="" class="logoImage mod-inHeader"></a>
+					</div>
+					<div class="nav__content f-aic">
+						<div class="nav__overlayMenu js-overlayMenu"></div>
+						<nav>
+							<ul class="nav__menu js-menu">
+								<li><a href="https://noname.site">Купить Toplash</a></li>
+								<li><a href="">FAQ</a></li>
+								<li><a href="">Отзывы</a></li>
+								<li><a href="">Профессионалам</a></li>
+								<li><a href="">Проверка продукции</a></li>
+								<li class="parent-btnSec"><a href="" class="btnSec">Войти</a></li>
+							</ul>
+						</nav>
+						<a href="" class="btnSec btnCart"> <!-- class "active" если в корзине что-то есть -->
+							<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#bag"/></svg>
+							<span class="ml-8 btnCartText">Корзина</span>
+							<span class="varticalDevider"></span>
+							<span>0</span>
+						</a>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-</header>
+	</header>
