--- a/#src/blocks/productPage/feedback.html
+++ b/#src/blocks/productPage/feedback.html
@@ -128,7 +128,7 @@
 				<li><a href="">1</a></li>
 				<li class="active"><a href="">2</a></li>
 				<li><a href="">3</a></li>
-				<li><a href="">...</a></li>
+				<li class="clear"><span>...</span></li>
 				<li><a href="">999</a></li>
 				<li class="mob-hide"><a href="">Следующая</a></li>
 			</ul>
