Еще раз закончил с правками

--- a/#src/blocks/productPage/cost.html
+++ b/#src/blocks/productPage/cost.html
@@ -11,9 +11,7 @@
 					<p>Итого наращивание ежемесячно обойдется порядка 5 000 рублей в среднем.</p>
 					<p class="text-default">При использовании сыворотки Toplash:</p>
 					<p>Одного флакона хватает на полных 3 месяца ежедневного использования. Если разделить цену, мы получаем стоимость, равную менее 700 рублей ежемесячно. Это бесспорно гораздо меньше, чем при наращивании.</p>
-					<a href="" class="btn">
-						<span>Попробовать Toplash</span>
-					</a>
+					<button class="btn js-goto-top">Попробовать Toplash</button>
 				</div>
 			</div>
 			<div class="cost__col mod2">
