--- a/#src/blocks/common/header.html
+++ b/#src/blocks/common/header.html
@@ -13,7 +13,7 @@
 								<use class="st-active" xlink:href="img/sprite/icons-sprite.svg#close"/>
 							</svg>
 						</button>
-						<a href="">
+						<a href="/">
 						<img loading="lazy" src="img/Toplash-logo.svg" alt="" class="logoImage mod-inHeader"></a>
 					</div>
 					<div class="nav__content f-aic">
