--- a/#src/cart.html
+++ b/#src/cart.html
@@ -32,8 +32,41 @@
 							</div>
 						</div>
 						<div class="cartProduct__col mod-col-4 flex-1 ws-n">
-							<p class="text-extra-small mb-4 ta-c">16 084 ₽</p>
-							<p class="darkGray ta-c">13 042 ₽/шт.</p>
+							<p class="text-extra-small mb-4 ta-c">816 084 ₽</p>
+							<p class="darkGray ta-c">813 042 ₽/шт.</p>
+						</div>
+						<div class="cartProduct__col mod-col-5 d-flex">
+							<button class="btnIcon js-submit-without-validate">
+								<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#remove"></use></svg>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="cartProduct">
+					<div class="cartProduct__col">
+						<div class="image-hw-80">
+							<img loading="lazy" src="img/card/01.jpg" alt="">
+						</div>
+					</div>
+					<div class="cartProduct__row">
+						<div class="cartProduct__col mod-col-2">
+							<p class="text-medium mb-4">Toplash Eyeliner and Wing Stamp protected by NaVi</p>
+							<p class="text-footnote">Подводка и штамп для стрелок</p>
+						</div>
+						<div class="cartProduct__col mod-col-3">
+							<div class="inputPlusminus">
+								<button class="js-submit-without-validate">
+									<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#minus"></use></svg>
+								</button>
+								<input type="number" name="count" autocomplete="off" value="1">
+								<button class="js-submit-without-validate">
+									<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#plus"></use></svg>
+								</button>
+							</div>
+						</div>
+						<div class="cartProduct__col mod-col-4 flex-1 ws-n">
+							<p class="text-extra-small mb-4 ta-c">7 084 ₽</p>
+							<p class="darkGray ta-c">5 042 ₽/шт.</p>
 						</div>
 						<div class="cartProduct__col mod-col-5 d-flex">
 							<button class="btnIcon js-submit-without-validate">
