--- a/#src/registration.html
+++ b/#src/registration.html
@@ -25,42 +25,17 @@
 				</div>
 				<div class="js-validation-block">
 					<div class="inputText">
-						<input class="_validate js-mask-tel" data-validation-type='["req", "tel"]' type="text" autocomplete="off" name="tel" placeholder=" ">
-						<label>Телефон (нужен при заказе)</label>
-					</div>
-					<p class="js-validation-error mt-4 error"></p>
-				</div>
-				<div class="js-validation-block">
-					<div class="inputText">
 						<input class="_validate" data-validation-type='["req", "email"]' type="text" autocomplete="off" name="email" placeholder=" ">
-						<label>Email*</label>
+						<label>Email</label>
 					</div>
 					<p class="js-validation-error mt-4 error"></p>
 				</div>
-				<div class="js-validation-block js-showHidePasswordParent">
-					<div class="inputText">
-						<input class="_validate js-password-match" data-validation-type='["req", "password"]' type="password" autocomplete="off" name="password" placeholder=" ">
-						<label>Пароль*</label>
-						<svg class="js-showHidePassword showHidePassword w24 svgWithState">
-							<use class="st-1" xlink:href="img/sprite/icons-sprite.svg#show-on"/>
-							<use class="st-2" xlink:href="img/sprite/icons-sprite.svg#show-off"/>
-						</svg>
-					</div>
-					<p class="js-validation-error mt-4 error"></p>
-				</div>
-				<div class="js-validation-block js-showHidePasswordParent">
-					<div class="inputText">
-						<input class="_validate" data-validation-type='["req", "password", "passwordMatch"]' type="password" autocomplete="off" name="repeat-password" placeholder=" ">
-						<label>Повторите пароль*</label>
-						<svg class="js-showHidePassword showHidePassword w24 svgWithState">
-							<use class="st-1" xlink:href="img/sprite/icons-sprite.svg#show-on"/>
-							<use class="st-2" xlink:href="img/sprite/icons-sprite.svg#show-off"/>
-						</svg>
-					</div>
-					<p class="js-validation-error mt-4 error"></p>
+				<div class="auth__line">
+					<div class="active"></div>
+					<div></div>
 				</div>
 				<div class="f-jcc-aic">
-					<button class="btn js-form-submit">Зарегистрироваться</button>
+					<button class="btn js-form-submit">Далее</button>
 				</div>
 				<div class="inputCheckbox">
 				  	<input type="checkbox" name="newsSubscribe" id="newsSubscribe">
