Добавил библиотеку lazyload и некоторые картинки оптимизировал под нее

--- a/#src/product-check.html
+++ b/#src/product-check.html
@@ -40,7 +40,9 @@
 			</div>
 			<div class="col-2 p-8">
 				<div class="imageArea">
-					<img width="477" height="629" loading="lazy" src="img/other/04.jpg" alt="">
+					<div class="lazy-wrap">
+						<img class="lazy" style="padding-top: 131.8658280922432%;" data-src="img/other/04.jpg" width="477" alt="">
+					</div>
 				</div>
 			</div>
 		</div>
