--- a/#src/professional.html
+++ b/#src/professional.html
@@ -8,7 +8,11 @@
 	<div class="p-16-0 container">
 		<div class="d-flex-md3-w aifs p-8">
 			<div class="col-2 p-8 sticky-min-md3">
-				<img width="640" height="800" loading="lazy" class="maxW-100" src="img/other/82.jpg" alt="">
+				<div class="imageArea">
+					<div class="lazy-wrap">
+						<img class="lazy" style="padding-top: 125%;" data-src="img/other/82.jpg" width="640" alt="">
+					</div>
+				</div>
 			</div>
 			<div class="col-2 p-8">
 				<div>
