--- a/#src/about-us.html
+++ b/#src/about-us.html
@@ -10,7 +10,7 @@
 	        <div class="result21__row">
 	            <div class="result21__col">
 	                <div class="result21__image">
-	                    <img loading="lazy" src="img/other/05.jpg" alt="">
+	                    <img class="lazy" style="padding-top: 100%;" data-src="img/other/05.jpg" width="760" alt="">
 	                </div>
 	            </div>
 	            <div class="result21__col">
