--- a/#src/blocks/common/footer.html
+++ b/#src/blocks/common/footer.html
@@ -115,5 +115,11 @@
 		</div>
 	</div>
 </footer>
+<script src="js/lazyload.min.js"></script>
 
+<script>
+	var lazyLoadInstance = new LazyLoad({
+		elements_selector: ".lazy"
+	});
+</script>
 </div>
