--- a/#src/faq.html
+++ b/#src/faq.html
@@ -10,7 +10,7 @@
 	        <div class="result21__row">
 	            <div class="result21__col">
 	                <div class="result21__image">
-	                    <img loading="lazy" src="img/other/b-01.jpg" alt="">
+	                    <img class="lazy" style="padding-top: 103.70942812983%;" data-src="img/other/b-01.jpg" width="647" alt="">
 	                </div>
 	            </div>
 	            <div class="result21__col">
