--- a/#src/shipping-and-payment.html
+++ b/#src/shipping-and-payment.html
@@ -10,7 +10,7 @@
 			<div class="result21__row">
 				<div class="result21__col">
 					<div class="result21__image">
-						<img width="647" height="512" loading="lazy" src="img/other/02.jpg" alt="">
+						<img class="lazy" style="padding-top: 79.13446676970634%;" data-src="img/other/02.jpg" width="647" alt="">
 					</div>
 				</div>
 				<div class="result21__col">
