Попапы подгружаются ajax-ом

--- a/#src/blocks/common/head.html
+++ b/#src/blocks/common/head.html
@@ -22,5 +22,5 @@
 	<script src="js/slick.min.js"></script>
 	<script src="js/select2.min.js"></script>
 	<script src="js/script.js"></script>
-	<title>@@title</title>
+	<title data-title="Скидка до 20% на все товары нашего магазина||Розыгрыш призов от Топлаш">@@title</title>
 </head>
