--- a/#src/product-page.html
+++ b/#src/product-page.html
@@ -74,6 +74,7 @@
 	@@include('blocks/fixedCard.html')
 	<script>
 		pathSprite = "img/sprite/icons-sprite.svg"; // Путь к спрайту с иконками
+		pathPopups = "popups.html"; // Путь к попапам
 	</script>
 </body>
 </html>
