Включил попап лотереи

--- a/#src/home.html
+++ b/#src/home.html
@@ -959,6 +959,7 @@
 	@@include('blocks/common/footer.html')
 	<script>
 		pathSprite = "img/sprite/icons-sprite.svg"; // Путь к спрайту с иконками
+		pathPopups = "popups.html"; // Путь к попапам
 	</script>
 </body>
 </html>
