Иконка тг превратилась в код svg потому что мы не смогли на сервере заменить спрайт

--- a/#src/blocks/productPage/unique.html
+++ b/#src/blocks/productPage/unique.html
@@ -33,12 +33,17 @@
 					<table>
 						<tr>
 							<td class="bg-lightGray"></td>
-							<td class="image1 @@classTableBG brad-t">
+							<td class="image1 @@classTableBG brad-t" style="vertical-align: bottom;">
 								<img loading="lazy" src="@@img1" alt="">
 							</td>
 							<td class="image2 bg-lightGray">
 								<img loading="lazy" src="@@img2" alt="">
 							</td>
+						</tr>
+						<tr>
+							<td class="bg-lightGray"></td>
+							<td class="@@classTableBG ta-c white" style="padding: 8px;">Сыворотка Toplash</td>
+							<td class="bg-lightGray ta-c" style="padding: 8px">Гормональное средство</td>
 						</tr>
 						@@if(page === "productPage"){
 							<tr>
