Блок "Будьте в курсе!"

--- a/#src/home.html
+++ b/#src/home.html
@@ -951,6 +951,32 @@
 					</a>
 				</div>
 			</div>
+			<div class="p-16">
+				<div class="bg-lightGray brad-24 o-h">
+					<div class="formSubscribe">
+						<div class="formSubscribe__text nlc-mb-8">
+							<p class="text-huge">Будьте в курсе!</p>
+							<p>Узнавайте первыми о промокодах и получайте специальные предложения Toplash</p>
+							<form class="js-validation-form" action="" method="post">
+								<div class="js-validation-block mt-16">
+									<div class="inputTextBtn">
+										<div class="inputText">
+											<input class="_validate" data-validation-type='["req", "email"]' type="text" autocomplete="off" name="email" placeholder=" ">
+											<label>Введите email</label>
+										</div>
+										<button class="inputBtn js-form-submit">Подписаться</button>
+									</div>
+									<p class="js-validation-error mt-4 error"></p>
+								</div>
+							</form>
+							<p class="text-footnote darkGray">Нажимая кнопку, я принимаю условия Пользовательского соглашения</p>
+						</div>
+						<div class="formSubscribe__image">
+							<img loading="lazy" src="img/other/email1.jpg" alt="">
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 		<div class="main-p-32-16 f-jcc-aic">
 			<button class="btn btn-inv js-goto-top md4-w-100">Вернуться наверх</button>
